EMS-Upgrade: Changed Java version from '8' to '17'. Updated Dockerfile and JRE package used during baguette client installation.